style.css
html,body {
    width: 100%;
    height: auto;
    overflow-x: hidden;
    margin: 0px;
    padding: 0px;
    background-image: url(body-background.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

body {
    
}

.titlebar {
    color: rgb(19, 12, 6);
    background: rgba(139, 99, 181, 0.534);
    background: linear-gradient(90deg, rgba(139, 99, 181, 0.664) 0%, rgba(159, 95, 161, 0.712) 49%, rgba(171, 158, 175, 0.685) 100%);
    border-bottom: 2px solid rgb(230, 230, 230);
    text-shadow:     
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); ;

}

#title {
    color: rgb(230, 230, 230);
    font-family: 'Monoton', cursive;

}


img { 
    height: 55px;
    width: auto;
    margin-left: 20px;
    -webkit-filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.596));
    filter:         drop-shadow(5px 4px 5px rgba(0, 0, 0, 0.596)); 
}


#sideBar {
    background-color: rgba(0, 0, 0, 0.555);
    color: whitesmoke;
    box-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); 
}

label {
    font-weight: bold;
}

::placeholder{
    font-style: italic;
    font-family: Arial, Helvetica, sans-serif;
}

input:valid {
    background-color: rgba(0, 0, 0, 0.555);
    color: whitesmoke;
    border: rgb(151, 150, 150) solid 1px;
}

select {
    background-color: rgba(0, 0, 0, 0.555);
    color: whitesmoke;
    border-radius: 5px;

}

#searchBtn {
    float: right;
}

#startMessage {
    padding-top: 255px;
    font-family: 'Days One', sans-serif;
    font-size: 28px;
    color: whitesmoke;
    text-shadow:    
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); ;
}

#infoRow {
    background-color: rgba(0, 0, 0, 0.555);
    color: whitesmoke;
    box-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5); 
    
}


footer {
    background-color: rgb(65, 64, 64);
    border-top: 1px solid rgb(230, 230, 230);
    height: 33px;
}

span {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 12px;
    color: whitesmoke;
    text-shadow:    
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25),
    10px 10px 20px rgba(0,0,0,.5),
    20px 40px 40px rgba(0,0,0,.5);
}

